# monet-maker

./: .gitignore  README.md  kernel-metadata.json  monet-maker.ipynb  requirements.txt
.github/workflows/: test.yml
experiments/: README.md  README.txt
experiments/Results-08/: README.txt
experiments/Results-09/: README.md
experiments/Results-09/checkpoints/: 01.ckpt.index  02.ckpt.index  03.ckpt.index  04.ckpt.index  05.ckpt.index  06.ckpt.index  07.ckpt.index  08.ckpt.index  09.ckpt.index  10.ckpt.index  11.ckpt.index  12.ckpt.index  13.ckpt.index  14.ckpt.index  15.ckpt.index
experiments/Results-11/: README.md
experiments/Results-12/: README.txt
experiments/Results-15/: README.txt
experiments/Results-16/: README.txt
experiments/Results-17/: README.md
experiments/Results-18/: README.md
experiments/Results-20/: README.txt
experiments/Results-21/: README.md
experiments/Results-22/: README.txt
experiments/Results-23/: README.md
experiments/Results-24/: README.md
experiments/Results-25/: README.md
experiments/Results-26/: README.md
experiments/Results-27/: README.md
experiments/Results-28/: README.md
python/: LICENSE  pyproject.toml
python/src/monet_maker/: callbacks.py  cyclegan.py  data.py  diffaug.py  distribute.py  patchgan.py  unet.py  vis.py
python/tests/: test_diffaug.py
src/monet_maker/: callbacks.py  cyclegan.py  data.py  diffaug.py  distribute.py  patchgan.py  unet.py  vis.py
tests/: test_cyclegan.py  test_diffaug.py
